01_clusters/01_k3d/03_simple/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello-world
  labels:
    app: flask-hello-world
spec:
  selector:
    matchLabels:
      app: flask-hello-world
  template:
    metadata:
      labels:
        app: flask-hello-world
    spec:
      containers:
      - name: flask-hello-world
        image: ghcr.io/dieguini/python-flask-sample:main  # Don't use "latest", it does not exist
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
