01_clusters/01_k3d/03_simple/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world
  labels:
    app: flask-hello-world
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: flask-hello-world
